force-app/main/default/objects/Pre_Determination_Request__c/Pre_Determination_Request__c.object-meta.xml
<CustomObject>
    <label>Pre Determination Request</label>
    <nameField>
        <displayFormat>PDR-{0000}</displayFormat>
        <label>Pre Determination Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Determination Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>