force-app/main/default/objects/Pre_Determination_Request__c/fields/Agent_Explanation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agent_Explanation_Summary__c</fullName>
    <label>Agent Explanation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>