force-app/main/default/objects/Pre_Determination_Request__c/fields/Calculated_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Insurance_Coverage__c</fullName>
    <label>Calculated Insurance Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>