force-app/main/default/objects/Pre_Determination_Request__c/fields/Calculated_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Patient_Responsibility__c</fullName>
    <label>Calculated Patient Responsibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>