force-app/main/default/objects/Pre_Determination_Request__c/fields/CDT_Code__c.field-meta.xml
<CustomField>
    <fullName>CDT_Code__c</fullName>
    <label>CDT Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>