force-app/main/default/objects/Pre_Determination_Request__c/fields/Estimated_Provider_Charge__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Provider_Charge__c</fullName>
    <label>Estimated Provider Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>