force-app/main/default/objects/Pre_Determination_Request__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Pre Determination Requests</relationshipLabel>
    <relationshipName>Pre_Determination_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>