force-app/main/default/objects/Pre_Determination_Request__c/fields/Tooth_Number__c.field-meta.xml
<CustomField>
    <fullName>Tooth_Number__c</fullName>
    <label>Tooth Number</label>
    <length>45</length>
    <type>Text</type>
</CustomField>